# naca

./: CMakeLists.txt  README.md  avd.cxx  epsilonpsi.mod  epspsi.cxx  naca456.cxx  nacaauxilary.mod  nacax.cxx  splineprocedures.mod  splprocs.cxx
ver6/: 0010-64.inp  0010-64.out  0012.OUT  0012.inp  16-009.inp  16-009.out  16-212.inp  16-212.out  23012.OUT  23012.inp  23112.inp  63-006.inp  63-006.out  63-206.inp  63-206.out  63A010.OUT  63A010.inp  63A409.OUT  63A409.inp  63a212.inp  63a415.inp  COMBO2.OUT  COMBO2.inp  NACA4.EQS  NACA4.TXT  NACA6.TXT  NACAPLOT.FOR  NAMELIST.TXT  Naca4.for  Naca6.for  README.TXT  TABLE1.TBL  naca4.inp  naca4.out  naca4.plt  naca6.inp
